	PR target/67834 	* config/pa/pa.c (pa_elf_select_rtx_section): New.  Put references to 	COMDAT group function labels in .data.rel.ro.local section. 	* config/pa/pa32-linux.h (TARGET_ASM_SELECT_RTX_SECTION): Define.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-9-branch@279824 138bc75d-0d04-0410-961f-82ee72b054a4